--- a/view/markup.html
+++ b/view/markup.html
@@ -11,8 +11,17 @@
     <ul>
         <li>목록1</li>
         <li>목록2</li>
-        <ㅣi>목록3</li>
+        <li>목록3</li>
+        <li>목록4</li>
     </ul>
+
+    <h1>순서형 목록</h1>
+    <ol>
+        <li>item</li>
+        <li>item</li>
+        <li>item</li>
+        <li>item</li>
+    </ol>
     
 </body>
 </html>
